--- a/Front/src/app/main/display-offers/display-offers.component.css
+++ b/Front/src/app/main/display-offers/display-offers.component.css
@@ -554,6 +554,7 @@ mat-card-content {
 .recommended-carousel {
   position: relative;
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
