--- a/Front/src/app/main/display-offers/display-offers.component.css
+++ b/Front/src/app/main/display-offers/display-offers.component.css
@@ -1,7 +1,7 @@
 /* === CONTENEDOR PRINCIPAL === */
 .offers-container {
   padding: 2%;
-  background-color: #f2f2f2;
+  background-color:#e7e7e7;
 }
 
 /* == FILTRO DE OFERTAS == */
