--- a/Front/src/app/shared/editable-avatar/editable-avatar.component.html
+++ b/Front/src/app/shared/editable-avatar/editable-avatar.component.html
@@ -9,7 +9,7 @@
     <!-- Icono de edición -->
     <div class="edit-icon">
       <mat-icon>edit</mat-icon>
-      <!-- <mat-icon>photo_camera</mat-icon> <!-- Alternativa con icono de cámara -->
+      <!-- <mat-icon>photo_camera</mat-icon> Alternativa con icono de cámara -->
     </div>
   </div>
 
