--- a/Front/src/app/main/recommended-offers/recommended-offers.component.html
+++ b/Front/src/app/main/recommended-offers/recommended-offers.component.html
@@ -9,7 +9,7 @@
       </button>
       <div class="title-section">
         <h1>
-          Ofertas Recomendadas para Ti
+          Ofertas recomendadas para ti
         </h1>
         <p>Ofertas seleccionadas específicamente según tu perfil y especialización técnica</p>
       </div>
