--- a/Front/src/app/main/admin-tech-labels-manager/admin-tech-labels-manager.component.css
+++ b/Front/src/app/main/admin-tech-labels-manager/admin-tech-labels-manager.component.css
@@ -159,14 +159,14 @@
 
 /* Filas y celdas de tabla */
 ::ng-deep .admin-tech-labels-manager .labels-table tr {
-  height: 60px;
+  height: 6rem;
 }
 
 ::ng-deep .admin-tech-labels-manager .labels-table th,
 ::ng-deep .admin-tech-labels-manager .labels-table td {
-  height: 60px;
+  height: 6rem;
   vertical-align: middle;
-  padding: 12px 16px;
+  padding-top: 16px;
   border-bottom: 1px solid #e0e0e0;
 }
 
